[project]
name = "piflow"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "boto3",
    "datasets",
    "diffusers>=0.35.1",
    #"fastapi==0.111.0",
    #"gradio==4.18.0",
    "imageio",
    "imageio-ffmpeg",
    "mmcv",
    "mmgen",
    "numpy>=1.26.4",
    "open-clip-torch",
    "peft>=0.17.0",
    "pydantic==2.7.4",
    "sentencepiece",
    "setuptools",
    "tensorboard",
    "transformers>=4.54.1",
    "torch",
    "wandb",
    "yapf==0.40.1",
    "zstandard",
    "orjson"
]

[tool.uv.sources]
mmcv = { git = "https://github.com/open-mmlab/mmcv.git", rev = "d409eedc816fccfb1c8d57e5eed5f03bd075f327" }
mmgen = { git = "https://github.com/Lakonik/mmgeneration.git", rev = "500a93e474638c87dcaf8fad94cfbe1ef29acd1f" }

[tool.uv.extra-build-dependencies]
mmgen = ["torch", "numpy"]
mmcv = ["torch", "numpy"]
